// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`probando el componente <GifExpertApp /> debe de mostrar una lista de categorias 1`] = `
<div>
  <h2>
    Gif Expert App
  </h2>
  <AddCategory
    setCategory={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="Colombia"
      key="Colombia"
    />
    <GifGrid
      category="pereira"
      key="pereira"
    />
  </ol>
</div>
`;

exports[`probando el componente <GifExpertApp /> debe mostrarse correctamente 1`] = `
<div>
  <h2>
    Gif Expert App
  </h2>
  <AddCategory
    setCategory={[Function]}
  />
  <hr />
  <ol />
</div>
`;
